mesh/fortran/src/mesh-levels.F90


    subroutine eap_mesh_cpp_levels_kid_put_v(&
      levs, level, input, output, datatype &
    ) bind(C, name="eap_mesh_cpp_levels_kid_put_v")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: level
      type(nd_array_t), intent(in) :: input
      type(nd_array_t), intent(in) :: output
      integer(c_int), value :: datatype
    end subroutine eap_mesh_cpp_levels_kid_put_v

    subroutine eap_mesh_cpp_levels_kid_put_inv(&
      levs, level, input, output, datatype &
    ) bind(C, name="eap_mesh_cpp_levels_kid_put_inv")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: level
      type(nd_array_t), intent(in) :: input
      type(nd_array_t), intent(in) :: output
      integer(c_int), value :: datatype
    end subroutine eap_mesh_cpp_levels_kid_put_inv

    subroutine eap_mesh_cpp_levels_mom_get(&
      levs, level, input, output, datatype &
    ) bind(C, name="eap_mesh_cpp_levels_mom_get")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: level
      type(nd_array_t), intent(in) :: input
      type(nd_array_t), intent(in) :: output
      integer(c_int), value :: datatype
    end subroutine eap_mesh_cpp_levels_mom_get

    subroutine eap_mesh_cpp_levels_apply_dzns(&
      levs, dzn, numdim, cells, time, kode &
    ) bind(C,name="eap_mesh_cpp_levels_apply_dzns")
      import

      type(c_ptr), value :: levs
      type(c_ptr), value :: dzn
      integer(c_int), value :: numdim
      type(c_ptr), value :: cells
      real(c_double), value :: time
      integer(c_int), value :: kode
    end subroutine eap_mesh_cpp_levels_apply_dzns

    subroutine eap_mesh_cpp_levels_set_num_pack(&
      levs, num_pack &
    ) bind(C,name="eap_mesh_cpp_levels_set_num_pack")
      import

      type(c_ptr), value :: levs
      integer(c_int32_t), value :: num_pack
    end subroutine eap_mesh_cpp_levels_set_num_pack

    subroutine eap_mesh_cpp_levels_set_level_max_from_tuples(&
      levs, tups_size, tups &
    ) bind(C, name="eap_mesh_cpp_levels_set_level_max_from_tuples")
      import

      type(c_ptr), value :: levs
      integer(c_size_t), value :: tups_size
      type(loc_val_t), intent(in) :: tups(*)
    end subroutine eap_mesh_cpp_levels_set_level_max_from_tuples
  end interface 
contains
  subroutine new_cpp_levels(levs)
    implicit none
    type(cpp_levels_t), intent(out) :: levs

    call CREATE_C(mesh,cpp_levels)(levs%ptr)
  end subroutine new_cpp_levels

  ! IMPORTANT: NO SPACE AFTER COMMA
  FC_INTEROP_FREE_IMPL(mesh,cpp_levels)
  FC_INTEROP_IS_ASSOCIATED_IMPL(mesh,cpp_levels)

  subroutine cpp_levels_t_initialize(self, opts)
    class(cpp_levels_t), intent(inout) :: self
    type(cpp_levels_options_t), intent(in) :: opts

    call eap_mesh_cpp_levels_initialize(self%ptr, opts)
  end subroutine cpp_levels_t_initialize

  subroutine cpp_levels_t_initialize_level1(self)
    class(cpp_levels_t), intent(inout) :: self

    call eap_mesh_cpp_levels_initialize_level1(self%ptr)
  end subroutine cpp_levels_t_initialize_level1

  subroutine cpp_levels_t_build_pack(self, cells)
    class(cpp_levels_t), intent(inout) :: self
    class(cpp_cells_t), intent(in) :: cells

    call eap_mesh_cpp_levels_build_pack(self%ptr, cells%ptr)
  end subroutine cpp_levels_t_build_pack

  subroutine cpp_levels_t_build_top(self, cells)
    class(cpp_levels_t), intent(inout) :: self
    class(cpp_cells_t), intent(in) :: cells

    call eap_mesh_cpp_levels_build_top(self%ptr, cells%ptr)
  end subroutine cpp_levels_t_build_top

  pure function cpp_levels_t_ltop_nv(self, l) result(ret)
    class(cpp_levels_t), intent(in) :: self
    integer, intent(in) :: l
    integer :: ret

    ret = self%ltop(l)
  end function cpp_levels_t_ltop_nv

  pure function cpp_levels_t_alltop_nv(self, l) result(ret)
    class(cpp_levels_t), intent(in) :: self
    integer, intent(in) :: l
    integer :: ret

    ret = self%alltop(l)
  end function cpp_levels_t_alltop_nv

  subroutine cpp_levels_t_reset_mothers_and_daughters(self, cells)
    class(cpp_levels_t), intent(inout) :: self
    class(cpp_cells_t), intent(in) :: cells

    call eap_mesh_cpp_levels_reset_mothers_and_daughters(self%ptr, cells%ptr)
  end subroutine cpp_levels_t_reset_mothers_and_daughters

  subroutine cpp_levels_t_reset_mothers_and_daughters_new(&
    self, cells, new_cells &
  )
    class(cpp_levels_t), intent(inout) :: self
    class(cpp_cells_t), intent(in) :: cells
    integer, intent(in) :: new_cells

    call eap_mesh_cpp_levels_reset_mothers_and_daughters_new(&
      self%ptr, cells%ptr, new_cells)
  end subroutine cpp_levels_t_reset_mothers_and_daughters_new

  subroutine cpp_levels_t_setup_alltop(self, cells)
    class(cpp_levels_t), intent(inout) :: self
    class(cpp_cells_t), intent(in) :: cells

    type(eap_mesh_cpp_levels_setup_all_top_fields) :: fields

    call eap_mesh_cpp_levels_setup_all_top(self%ptr, cells%ptr, fields)

    call from_nd_array(fields%all_top, self%alltop)
  end subroutine cpp_levels_t_setup_alltop

  pure subroutine cpp_levels_t_cell_mother_set(self, l, val)
    class(cpp_levels_t), intent(inout) :: self
    integer, intent(in) :: l
    integer(INT64), intent(in) :: val

    self%cell_mother(l) = val
  end subroutine cpp_levels_t_cell_mother_set

  pure subroutine cpp_levels_t_cell_daughter_set(self, l, val)
    class(cpp_levels_t), intent(inout) :: self
    integer, intent(in) :: l
    integer(INT64), intent(in) :: val

    self%cell_daughter(l) = val
  end subroutine cpp_levels_t_cell_daughter_set

  pure subroutine cpp_levels_t_levelmx_set(self, l, val)
    class(cpp_levels_t), intent(inout) :: self
    integer, intent(in) :: l, val

    self%levelmx(l) = val
  end subroutine cpp_levels_t_levelmx_set

  pure subroutine cpp_levels_t_setall_levelmx(self, cells, levelmx_tmp)
    class(cpp_levels_t), intent(inout) :: self
    class(cpp_cells_t), intent(in) :: cells
    integer, intent(in) :: levelmx_tmp(:)

    self%levelmx(:cells%cpp_numcell_clone) = &
      levelmx_tmp(:cells%cpp_numcell_clone)
  end subroutine cpp_levels_t_setall_levelmx

  subroutine cpp_levels_t_resize_local(self, num_cells, newsize)
    class(cpp_levels_t), intent(inout) :: self
    integer(INT32), intent(in) :: num_cells, newsize

    type(eap_mesh_cpp_levels_resize_local_fields) :: fields

    call eap_mesh_cpp_levels_resize_local(self%ptr, num_cells, newsize, fields)

    call from_nd_array(fields%cell_daughter, self%cell_daughter)
    call from_nd_array(fields%cell_mother, self%cell_mother)
    call from_nd_array(fields%ltop, self%ltop)
    call from_nd_array(fields%cell_level, self%cell_level)
    call from_nd_array(fields%flag, self%flag)
    call from_nd_array(fields%flag_tag, self%flag_tag)
  end subroutine cpp_levels_t_resize_local

  subroutine cpp_levels_t_recon_move(&
    self, data_length, send_start, send_length, recv_start, recv_length &
  )
    class(cpp_levels_t), intent(inout) :: self
    integer, intent(in) :: data_length
    integer, dimension(:), intent(in) :: &
      send_start, send_length, recv_start, recv_length

    call eap_mesh_cpp_levels_recon_move_f(&
      self%ptr, data_length, size(send_start, kind=c_size_t), &
      send_start, send_length, recv_start, recv_length)
  end subroutine cpp_levels_t_recon_move

  subroutine cpp_levels_t_foreach_at_level(&
    self, level, f &
  )
    class(cpp_levels_t), intent(in) :: self
    integer, intent(in) :: level
    interface
      subroutine f(l)
        integer, intent(in) :: l
      end subroutine f
    end interface

    call eap_mesh_cpp_levels_foreach_at_level(&
      self%ptr, level - 1, c_null_ptr, trampoline)
  contains
    subroutine trampoline(context, l) bind(C)
      type(c_ptr), value :: context
      integer(c_int32_t), value :: l

      ! Suppress unused-dummy-argument - we don't need context in Fortran since
      ! subroutines implicitly capture the state of their parents
      if (.false.) context = c_null_ptr

      call f(l + 1)
    end subroutine trampoline
  end subroutine cpp_levels_t_foreach_at_level

  subroutine cpp_levels_t_map_at_level(&
    self, level, out, f &
  )
    class(cpp_levels_t), intent(in) :: self
    integer, intent(in) :: level
    type(loc_val_t), intent(inout) :: out(:)
    interface
      integer function f(l)
        integer, intent(in) :: l
      end function f
    end interface

    call eap_mesh_cpp_levels_map_at_level_f(&
      self%ptr, level - 1, to_nd_array_lv(out), c_null_ptr, trampoline)
  contains
    integer(c_int32_t) function trampoline(context, l) bind(C)
      type(c_ptr), value :: context
      integer(c_int32_t), value :: l

      ! Suppress unused-dummy-argument - we don't need context in Fortran since
      ! subroutines implicitly capture the state of their parents
      if (.false.) context = c_null_ptr

      trampoline = f(l + 1)
    end function trampoline
  end subroutine cpp_levels_t_map_at_level

  function cpp_levels_t_filter_at_level(&
    self, cells, level, pred &
  ) result(filtered)
    class(cpp_levels_t), intent(in) :: self
    class(cpp_cells_t), intent(in) :: cells
    integer, intent(in) :: level
    interface
      logical function pred(l)
        integer, intent(in) :: l
      end function pred
    end interface
    integer, allocatable :: filtered(:)

    integer :: count

    count = 0
    call eap_mesh_cpp_levels_count_filter_at_level(&
      self%ptr, cells%ptr, level - 1, c_null_ptr, trampoline, count &
    )

    allocate(filtered(count))
    call eap_mesh_cpp_levels_filter_at_level_f(&
      self%ptr, cells%ptr, level - 1, to_nd_array(filtered), c_null_ptr, &
      trampoline &
    )
  contains
    logical(c_bool) function trampoline(context, l) bind(C)
      type(c_ptr), value :: context
      integer(c_int), value :: l

      ! Suppress unused-dummy-argument - we don't need context in Fortran since
      ! subroutines implicitly capture the state of their parents
      if (.false.) context = c_null_ptr

      trampoline = logical(pred(l + 1), c_bool)
    end function trampoline
  end function cpp_levels_t_filter_at_level

  function cpp_levels_t_collect_at_level(&
    levs, cells, level &
  ) result(collected)
    class(cpp_levels_t), intent(in) :: levs
    class(cpp_cells_t), intent(in)  :: cells
    integer, intent(in) :: level
    integer, allocatable :: collected(:)

    integer :: num

    num = levs%num_at_level(level)
    allocate(collected(num))

    call eap_mesh_cpp_levels_collect_at_level_f(&
      levs%ptr, cells%ptr, level - 1, to_nd_array(collected) &
    )
  end function cpp_levels_t_collect_at_level

  integer function cpp_levels_t_clear_at_level(&
    levs, level, flags &
  ) result(num_cleared)
    class(cpp_levels_t), intent(in) :: levs
    integer, intent(in) :: level
    logical, intent(in) :: flags(:)

    logical(c_bool) :: flags_c_bool(size(flags, 1))

    flags_c_bool = logical(flags, c_bool)

    call eap_mesh_cpp_levels_clear_at_level(&
      levs%ptr, level - 1, to_nd_array(flags_c_bool), num_cleared &
    )
  end function cpp_levels_t_clear_at_level

  integer function cpp_levels_t_num_at_level(levs, level) result(num)
    class(cpp_levels_t), intent(in) :: levs
    integer, intent(in) :: level

    call eap_mesh_cpp_levels_num_at_level(levs%ptr, level - 1, num)
  end function cpp_levels_t_num_at_level

  subroutine cpp_levels_t_recon_pack(&
    levs, nlow, nhigh, nstep, move_from, move_to &
  )
    class(cpp_levels_t), intent(in) :: levs
    integer, intent(in) :: nlow, nhigh, nstep
    integer, intent(in) :: move_from(:), move_to(:)

    call eap_mesh_cpp_levels_recon_pack(&
      levs%ptr, nlow - 1, nhigh - 1, nstep, size(move_from, 1), move_from, &
      move_to &
    )
  end subroutine cpp_levels_t_recon_pack
